--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "deep-email-validator": "^0.1.21",
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
+    "encode": "^1.0.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-form-data": "^2.0.19",
+    "hi-base32": "^0.5.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.6.5",
