--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "otpauth": "^9.2.2"
+    "otpauth": "^9.2.2",
+    "speakeasy": "^2.0.0"
   }
 }
